# httpageboy

./: .gitignore  AGENTS.md  Cargo.toml  README.md
examples/: api_consumer.rs
src/: lib.rs  main.rs
src/core/: cors.rs  handler.rs  mod.rs  request.rs  request_type.rs  test_utils.rs
src/runtime/async/: async_std.rs  shared.rs  smol.rs  tokio.rs
src/runtime/sync/: server.rs  threadpool.rs
tests/: test_async_smol.rs  test_async_std.rs  test_async_tokio.rs  test_sync.rs
