[package]
name = "httpageboy"
version = "1.0.17"
edition = "2024"
authors = ["fahedsl <fahedsl@yandex.com>"]
description = "A lightweight library for handling raw HTTP request/response transmission. Good base for APIs. Supports both synchronous and asynchronous programming models."
license = "MIT"
repository = "https://gitlab.com/numanope/libs/rs/http-server"
homepage = "https://gitlab.com/numanope/libs/rs/http-server"
documentation = "https://docs.rs/httpageboy"
readme = "README.md"
keywords = ["http", "server", "request", "response"]
categories = ["network-programming", "web-programming::http-server"]

[lib]
path = "src/lib.rs"

[features]
sync = []
async_tokio = ["tokio"]
async_smol = ["smol", "futures-lite"]
async_std = ["async-std"]

[dependencies]
futures = "0.3"
async-std = { version = "1", optional = true, features = ["attributes"] }
async-trait = "0.1.89"
futures-lite = { version = "1.8", optional = true }
smol = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = [
  "rt",
  "net",
  "io-util",
  "rt-multi-thread",
  "macros",
  "time",
] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
